major changes to vimrc and tmux conf

--- a/linux/.tmux.conf
+++ b/linux/.tmux.conf
@@ -18,10 +18,8 @@ setw -g mode-keys vi
 setw -g mouse on
 setw -g monitor-activity on
 
-bind-key -n C-h split-window -h
-bind-key -n C-l split-window -h
-bind-key -n C-j split-window -v
-bind-key -n C-k split-window -v
+bind-key -n C-Space split-window -h
+bind-key -n C-] split-window -v
 bind-key -n C-s kill-pane
 bind-key -n C-f resize-pane -Z
 
@@ -30,10 +28,10 @@ bind-key K resize-pane -U 5
 bind-key H resize-pane -L 5
 bind-key L resize-pane -R 5
 
-bind-key M-j resize-pane -D
-bind-key M-k resize-pane -U
-bind-key M-h resize-pane -L
-bind-key M-l resize-pane -R
+#bind-key M-j resize-pane -D
+#bind-key M-k resize-pane -U
+#bind-key M-h resize-pane -L
+#bind-key M-l resize-pane -R
 
 # Vim style pane selection
 bind h select-pane -L
@@ -54,6 +52,7 @@ bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
 # Shift arrow to switch windows
+bind -n C-n new-window
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 
@@ -64,7 +63,13 @@ set -sg escape-time 0
 bind r source-file ~/.tmux.conf
 
 set -g @plugin 'tmux-plugins/tmux-battery'
-set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
+set -g @plugin 'samoshkin/tmux-plugin-sysstat'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @sysstat_mem_view_tmpl 'Used #[fg=#{mem.color}] #{mem.used}#[default] out of #{mem.total}'
+#set -g @sysstat_cpu_tmp_dir '/home/saurabh/cpu_shit'
+set -g status-interval 2
+set -g status-right 'GPU: #{gpu_fg_color}#{gpu_percentage} #[default] | CPU: #{cpu_fg_color}#{cpu_percentage}#[default] | #{sysstat_mem} | #{sysstat_swap} #[default] #[fg=white]%H:%M#[default] #{battery_status_bg} #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d '
+set -g status-right-length 140
 
 
 # THEME
@@ -73,4 +78,5 @@ set -g status-fg white
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=green](#S) #(whoami)'
-set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
+#set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
+run -b '~/.tmux/plugins/tpm/tpm'
