--- a/OSCat/.tmux.conf
+++ b/OSCat/.tmux.conf
@@ -1,105 +1,82 @@
-# change the prefix from 'C-b' to 'C-a'
-# (remap capslock to CTRL for easy access)
+# remap prefix from 'C-b' to 'C-a'
 unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
+set-option -g prefix C-a
+bind-key C-a send-prefix
 
-# start with window 1 (instead of 0)
+# 0 is too far from ` ;)
 set -g base-index 1
 
-# start with pane 1
-set -g pane-base-index 1
+# Automatically set window title
+set-window-option -g automatic-rename on
+set-option -g set-titles on
 
-# split panes using | and -, make sure they open in the same path
-bind | split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
+set -g default-terminal screen-256color
+set -g status-keys vi
+set -g history-limit 10000
 
-unbind '"'
-unbind %
+setw -g mode-keys vi
+setw -g mouse on
+setw -g monitor-activity on
 
-# open new windows in the current path
-bind c new-window -c "#{pane_current_path}"
+bind-key -n C-Space split-window -h
+bind-key -n C-] split-window -v
+bind-key -n C-s kill-pane
+bind-key -n C-f resize-pane -Z
 
-# reload config file
-bind r source-file ~/.tmux.conf
+bind-key J resize-pane -D 5
+bind-key K resize-pane -U 5
+bind-key H resize-pane -L 5
+bind-key L resize-pane -R 5
 
-unbind p
-bind p previous-window
+#bind-key M-j resize-pane -D
+#bind-key M-k resize-pane -U
+#bind-key M-h resize-pane -L
+#bind-key M-l resize-pane -R
 
-# shorten command delay
-set -sg escape-time 1
-
-# don't rename windows automatically
-set -g allow-rename off
-
-# mouse control (clickable windows, panes, resizable panes)
-set -g mouse on
-
-# Use hjkl keys with prefix key to switch panes
+# Vim style pane selection
 bind h select-pane -L
-bind l select-pane -R
+bind j select-pane -D 
 bind k select-pane -U
-bind j select-pane -D
+bind l select-pane -R
 
-# Use shift and arrow keys to change window
-bind -n S-Left previous-window
+# Use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D 
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Shift arrow to switch windows
+bind -n C-n new-window
+bind -n S-Left  previous-window
 bind -n S-Right next-window
 
-# enable vi mode keys
-set-window-option -g mode-keys vi
+# No delay for escape key press
+set -sg escape-time 0
 
-# set default terminal mode to 256 colors
-set -g default-terminal "xterm-256color"
+# Reload tmux config
+bind r source-file ~/.tmux.conf
 
-
-# fix pbcopy/pbpaste
-if 'command -v reattach-to-user-namespace >/dev/null' \
-    'set -gq @osx-pasteboard true'
-
-if 'tmux show -gv @osx-clipboard' \
-    'set -g default-command "reattach-to-user-namespace -l $SHELL"'
-
-# present a menu of URLs to open from the visible pane. sweet.
-bind u capture-pane \;\
-    save-buffer /tmp/tmux-buffer \;\
-    split-window -l 10 "urlview /tmp/tmux-buffer"
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'samoshkin/tmux-plugin-sysstat'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @sysstat_mem_view_tmpl 'Used #[fg=#{mem.color}] #{mem.used}#[default] out of #{mem.total}'
+#set -g @sysstat_cpu_tmp_dir '/home/saurabh/cpu_shit'
+set -g status-interval 2
+set -g status-right 'GPU: #{gpu_fg_color}#{gpu_percentage} #[default] | CPU: #{cpu_fg_color}#{cpu_percentage}#[default] | #{sysstat_mem} | #{sysstat_swap} #[default] #[fg=white]%H:%M#[default] #{battery_status_bg} #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d '
+set -g status-right-length 140
 
 
-######################
-### DESIGN CHANGES ###
-######################
-
-# loud or quiet?
-set -g visual-activity off
-set -g visual-bell off
-set -g visual-silence off
-setw -g monitor-activity off
-set -g bell-action none
-
-#  modes
-setw -g clock-mode-colour colour5
-setw -g mode-style 'fg=colour1 bg=colour248 bold'
-
-# panes
-set -g pane-border-style 'fg=colour19 bg=colour0'
-set -g pane-active-border-style 'bg=colour0 fg=colour9'
-
-# statusbar
-set -g status-position bottom
-set -g status-justify left
-set -g status-style 'bg=colour18 fg=colour137 dim'
-set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour19] %d/%m #[fg=colour233,bg=colour8] %H:%M:%S '
-set -g status-right-length 50
-set -g status-left-length 20
-
-setw -g window-status-current-style 'fg=colour1 bg=colour19 bold'
-setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
-
-setw -g window-status-style 'fg=colour9 bg=colour18'
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
-
-setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
-
-# messages
-set -g message-style 'fg=colour232 bg=colour16 bold'
+# THEME
+set -g status-bg black
+set -g status-fg white
+set -g status-interval 60
+set -g status-left-length 30
+set -g status-left '#[fg=green](#S) #(whoami)'
+#set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
+run -b '~/.tmux/plugins/tpm/tpm'
