updated tmux and vimrc

--- a/linux/.tmux.conf
+++ b/linux/.tmux.conf
@@ -65,10 +65,11 @@ bind r source-file ~/.tmux.conf
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'samoshkin/tmux-plugin-sysstat'
 set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-net-speed'
 set -g @sysstat_mem_view_tmpl 'Used #[fg=#{mem.color}] #{mem.used}#[default] out of #{mem.total}'
 #set -g @sysstat_cpu_tmp_dir '/home/saurabh/cpu_shit'
 set -g status-interval 2
-set -g status-right 'GPU: #{gpu_fg_color}#{gpu_percentage} #[default] | CPU: #{cpu_fg_color}#{cpu_percentage}#[default] | #{sysstat_mem} | #{sysstat_swap} #[default] #[fg=white]%H:%M#[default] #{battery_status_bg} #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d '
+set -g status-right 'GPU: #{gpu_fg_color}#{gpu_percentage} #[default] | CPU: #{cpu_fg_color}#{cpu_percentage}#[default] | #{sysstat_mem} | #{sysstat_swap} #[default] #[fg=white]| %H:%M#[default] | #{net_speed} | %a %h-%d '
 set -g status-right-length 140
 
 
